# not allowed to design without official permission from the script creator 

[package]
name = "arm64"
version = "1.0.1"
edition = "2021"

description = "release all mobile legends graphic settings "
authors = ["@UnixeID <betrix322@gmail.com>"]
license = "GPL-3.0" 
homepage = "https://github.com/Betrix-ID"

[package.metadata]
telegram_channel = "https://t.me/Yeye_PID"  

[profile.release]
opt-level = "z"
strip = "symbols"